--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ a.main_item{
     border-radius: 3px;
     margin: 10px;
     margin-top: 20px;
+    border: 0.1px solid #f2f2f2;
 }
 
 .main_items{
